Change position from the social buttons

--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -98,6 +98,9 @@ header {
             }*/
         }
     }
+    section {
+        float:right;
+    }
 }
 banner {
     position: relative;
@@ -273,15 +276,11 @@ section {
             float: left;
             margin-right: 8px;
         }
-        a.button {
-            width: 27px;
-            height: 27px;
-        }
     }
     a.button {
         display: inline-block;
-        width: 36px;
-        height: 36px;
+        width: 16px;
+        height: 16px;
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: 0px 100%;
