Change position from the social buttons

--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -70,7 +70,7 @@ header {
     menu {
         float: right;
         margin: 0px;
-        padding: 1% 0px 0.5% 0px;
+        padding: 3.3% 0 1% 0;
         text-align: center;
         /*width:300px;*/
         ul {
@@ -99,7 +99,8 @@ header {
         }
     }
     section {
-        float:right;
+        text-align: right;
+        position: absolute;
     }
 }
 banner {
