Add 52 semanas page

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -62,6 +62,9 @@
                         <a href="/life-list.html" {%if page.categories contains 'life-list'%}class="selected" {%endif%} title="Uma lista de coisas que acho imprescindível realizar antes de morrer.">LIFE LIST</a>
                     </li>
                     <li>
+                        <a href="/52-semanas.html" {%if page.categories contains '52-Semanas'%}class="selected" {%endif%} title="Um evento por semana durante o ano inteiro">52 SEMANAS</a>
+                    </li>
+                    <li>
                         <a href="/palestras.html" {%if page.categories contains 'palestras'%}class="selected" {%endif%} title="Eventos em que participei palestrando.">PALESTRAS</a>
                     </li>
                     <li>
