--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -123,6 +123,8 @@ banner {
         padding: 10px;
         background-color: rgba(0, 0, 0, 0.26);
         margin: 10px;
+        left: 0px;
+        width: 840px;
     }
     author {
         .text-shadow(0px, 0px, 4px, rgba(0, 0, 0, 1));
