Add to Travis CI

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -111,7 +111,7 @@
                 </div>
                 <p class="hosting">
                     <small>Este site possui todo seu conteúdo aberto e disponível em um
-                        <a href="http://github.com/sidneylimafilho/sidneylimafilho.github.com" target="_blank">repositório público</a>.
+                        <a href="http://github.com/sidneylimafilho/sidneylimafilho.github.com" target="_blank">repositório público</a>. <img src='https://travis-ci.org/sidneylimafilho/sidneylimafilho.github.com.png?branch=master' />
                     </small>
                 </p>
             </div>
