--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -42,18 +42,18 @@
             <a href="/">
                 <h1 class="signature">Sidney Lima Filho</h1>
             </a>
-            <section>
-                <a target="_blank" class="button twitter" href="http://twitter.com/sidneylimafilho" title="Pensamentos rápidos via Twitter."></a>
-                <a target="_blank" class="button facebook" href="http://www.facebook.com/sidneylimafilho" title="Minha vida social no Facebook."></a>
-                <a target="_blank" class="button linkedin" href="http://www.linkedin.com/in/sidneylimafilho" title="Minha rede profissional no Linkedin."></a>
-                <a target="_blank" class="button feed" href="http://feeds.feedburner.com/sidneyfilho/" title="Assine meus posts com o RSS."></a>
-                <a target="_blank" class="button slideshare" href="http://www.slideshare.net/sidneylimafilho" title="Veja meus slides no Slideshare."></a>
-                <a target="_blank" class="button github" href="http://www.github.com/sidneylimafilho" title="O que desenvolvo e coloco no Github."></a>
-                <a target="_blank" class="button youtube" href="http://www.youtube.com/user/TheSidneyLimaFilho" title="Filmes que assisto via Youtube."></a>
-                <a target="_blank" class="button mail" href="https://docs.google.com/spreadsheet/viewform?formkey=dEtLSzNWdXlnanJMdTN6WmtQb2VnMlE6MQ" title="Clique aqui para me enviar uma mensagem."></a>
-                <a target="_blank" class="button google" href="https://plus.google.com/u/0/+SidneyLimaFilho?rel=author" title="Minha vida social no G+."></a>
-            </section>
             <menu>
+                <section>
+                    <a target="_blank" class="button twitter" href="http://twitter.com/sidneylimafilho" title="Pensamentos rápidos via Twitter."></a>
+                    <a target="_blank" class="button facebook" href="http://www.facebook.com/sidneylimafilho" title="Minha vida social no Facebook."></a>
+                    <a target="_blank" class="button linkedin" href="http://www.linkedin.com/in/sidneylimafilho" title="Minha rede profissional no Linkedin."></a>
+                    <a target="_blank" class="button feed" href="http://feeds.feedburner.com/sidneyfilho/" title="Assine meus posts com o RSS."></a>
+                    <a target="_blank" class="button slideshare" href="http://www.slideshare.net/sidneylimafilho" title="Veja meus slides no Slideshare."></a>
+                    <a target="_blank" class="button github" href="http://www.github.com/sidneylimafilho" title="O que desenvolvo e coloco no Github."></a>
+                    <a target="_blank" class="button youtube" href="http://www.youtube.com/user/TheSidneyLimaFilho" title="Filmes que assisto via Youtube."></a>
+                    <a target="_blank" class="button mail" href="https://docs.google.com/spreadsheet/viewform?formkey=dEtLSzNWdXlnanJMdTN6WmtQb2VnMlE6MQ" title="Clique aqui para me enviar uma mensagem."></a>
+                    <a target="_blank" class="button google" href="https://plus.google.com/u/0/+SidneyLimaFilho?rel=author" title="Minha vida social no G+."></a>
+                </section>
                 <ul>
                     <li>
                         <a href="/quem-e-sidney.html" {%if page.categories contains 'quem-e-sidney'%}class="selected" {%endif%} title="Um pequeno resumo de quem eu sou e porque você deveria acompanhar essa história.">QUEM É SIDNEY</a>
@@ -105,13 +105,14 @@
                 <div class="tag-cloud">
                     {% for t in site.tags %} {% capture tag %}{{t | first}}{% endcapture %}
                     <span>
-                        <a href="/tags.html#{{tag | downcase | replace:" ","- " | replace:". "," " }}" style="font-size:{{site.tags[tag] | size | minus:1 | times:20 | plus:80}}%">{{tag}} ({{site.tags[tag] | size}})</a>
+                        <a href="/tags.html#{{tag | downcase | replace:" ","-" | replace:".","" }}" style="font-size:{{site.tags[tag] | size | minus:1 | times:20 | plus:80}}%">{{tag}} ({{site.tags[tag] | size}})</a>
                     </span>
                     {% endfor %}
                 </div>
                 <p class="hosting">
                     <small>Este site possui todo seu conteúdo aberto e disponível em um
-                        <a href="http://github.com/sidneylimafilho/sidneylimafilho.github.com" target="_blank">repositório público</a>. <img src='https://travis-ci.org/sidneylimafilho/sidneylimafilho.github.com.png?branch=master' />
+                        <a href="http://github.com/sidneylimafilho/sidneylimafilho.github.com" target="_blank">repositório público</a>.
+                        <img src='https://travis-ci.org/sidneylimafilho/sidneylimafilho.github.com.png?branch=master' />
                     </small>
                 </p>
             </div>
