Add link to Travis

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -103,19 +103,20 @@
         <div class="super">
             <div class="wrapper">
                 <div class="tag-cloud">
-                    {% capture tagsAsString %}{% for tag in site.tags %}{{ tag | first }},{% endfor %}{% endcapture %}
-                    {% assign tags = tagsAsString | split:"," | sort %}
-                    {% for tag in tags %} 
+                    {% capture tagsAsString %}{% for tag in site.tags %}{{ tag | first }},{% endfor %}{% endcapture %} {% assign tags = tagsAsString | split:"," | sort %} {% for tag in tags %}
                     <span>
-                        <a href="/tags.html#{{tag | downcase | replace:" ","-" | replace:".","" }}" style="font-size:{{site.tags[tag] | size | minus:1 | times:20 | plus:80}}%">{{tag}} ({{site.tags[tag] | size}})</a>
+                        <a href="/tags.html#{{tag | downcase | replace:" ","- " | replace:". "," " }}" style="font-size:{{site.tags[tag] | size | minus:1 | times:20 | plus:80}}%">{{tag}} ({{site.tags[tag] | size}})</a>
                     </span>
                     {% endfor %}
                 </div>
                 <p class="hosting">
                     <small>Este site possui todo seu conteúdo aberto e disponível em um
                         <a href="http://github.com/sidneylimafilho/sidneylimafilho.github.com" target="_blank">repositório público</a>.
-                        <img src='https://travis-ci.org/sidneylimafilho/sidneylimafilho.github.com.png?branch=master' />
                     </small>
+                    <br/>
+                    <a href="https://travis-ci.org/sidneylimafilho/sidneylimafilho.github.com">
+                        <img src='https://travis-ci.org/sidneylimafilho/sidneylimafilho.github.com.png?branch=master' />
+                    </a>
                 </p>
             </div>
         </div>
