--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -220,12 +220,14 @@ section {
                 padding: 5px;
                 position: absolute;
                 width: 250px;
+                /*
                 .title {
                     min-height: 44px;
                     display: inline-block;
                     max-width: 200px;
                     vertical-align: top;
                 }
+                */
                 .excerpt {
                     display: none
                 }
@@ -245,13 +247,16 @@ section {
             /*.opacity(0.4);*/
         }
     }
+    /*
     time {
+        
         width: 24px;
         text-align: left;
         display: inline-block;
         font-size: 16px;
         padding-right: 20px;
         margin-top: -2px;
+        
     }
     day {
         font-size: 26px;
@@ -273,6 +278,7 @@ section {
         margin-left: 15px;
         color: rgb(252, 211, 137);
     }
+    */
     .myinfo {
         .gravatar, nav {
             margin: 8px;
