Ajustes no layout do menu

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -53,17 +53,17 @@
                 <h1 class="signature">Sidney Lima Filho</h1>
             </a>
             <menu>
-                <section>
-                    <a target="_blank" class="button twitter" href="http://twitter.com/sidneylimafilho" title="Pensamentos rápidos via Twitter."></a>
-                    <a target="_blank" class="button facebook" href="http://www.facebook.com/sidneylimafilho" title="Minha vida social no Facebook."></a>
-                    <a target="_blank" class="button linkedin" href="http://www.linkedin.com/in/sidneylimafilho" title="Minha rede profissional no Linkedin."></a>
-                    <a target="_blank" class="button feed" href="http://feeds.feedburner.com/sidneyfilho/" title="Assine meus posts com o RSS."></a>
-                    <a target="_blank" class="button slideshare" href="http://www.slideshare.net/sidneylimafilho" title="Veja meus slides no Slideshare."></a>
-                    <a target="_blank" class="button github" href="http://www.github.com/sidneylimafilho" title="O que desenvolvo e coloco no Github."></a>
-                    <a target="_blank" class="button youtube" href="http://www.youtube.com/user/TheSidneyLimaFilho" title="Filmes que assisto via Youtube."></a>
-                    <a target="_blank" class="button mail" href="https://docs.google.com/spreadsheet/viewform?formkey=dEtLSzNWdXlnanJMdTN6WmtQb2VnMlE6MQ" title="Clique aqui para me enviar uma mensagem."></a>
-                    <a target="_blank" class="button google" href="https://plus.google.com/u/0/+SidneyLimaFilho?rel=author" title="Minha vida social no G+."></a>
-                </section>
+                <nav>
+                    <a target="_blank" class="socialButton twitter" href="http://twitter.com/sidneylimafilho" title="Pensamentos rápidos via Twitter."></a>
+                    <a target="_blank" class="socialButton facebook" href="http://www.facebook.com/sidneylimafilho" title="Minha vida social no Facebook."></a>
+                    <a target="_blank" class="socialButton linkedin" href="http://www.linkedin.com/in/sidneylimafilho" title="Minha rede profissional no Linkedin."></a>
+                    <a target="_blank" class="socialButton feed" href="http://feeds.feedburner.com/sidneyfilho/" title="Assine meus posts com o RSS."></a>
+                    <a target="_blank" class="socialButton slideshare" href="http://www.slideshare.net/sidneylimafilho" title="Veja meus slides no Slideshare."></a>
+                    <a target="_blank" class="socialButton github" href="http://www.github.com/sidneylimafilho" title="O que desenvolvo e coloco no Github."></a>
+                    <a target="_blank" class="socialButton youtube" href="http://www.youtube.com/user/TheSidneyLimaFilho" title="Filmes que assisto via Youtube."></a>
+                    <a target="_blank" class="socialButton mail" href="https://docs.google.com/spreadsheet/viewform?formkey=dEtLSzNWdXlnanJMdTN6WmtQb2VnMlE6MQ" title="Clique aqui para me enviar uma mensagem."></a>
+                    <a target="_blank" class="socialButton google" href="https://plus.google.com/u/0/+SidneyLimaFilho?rel=author" title="Minha vida social no G+."></a>
+                </nav>
                 <ul>
                     <li>
                         <a href="/quem-e-sidney.html" {%if page.categories contains 'quem-e-sidney'%}class="selected" {%endif%} title="Um pequeno resumo de quem eu sou e porque você deveria acompanhar essa história.">QUEM É SIDNEY</a>
