--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -67,13 +67,11 @@ header {
         top:0px;
         right:0px;
     }
-
     section {
         background: none;
         margin-bottom: 12px;
     }
 }
-
 menu {
     float: right;
     margin: 0px;
@@ -92,23 +90,15 @@ menu {
         /*border-right:1px solid #d2d2d2;
         height: 70px;*/
         vertical-align: middle;
-        a {
-            display:block;
-            text-align:center;
-            font-size:18px;
-            color: #696B33;
-            .text-shadow(0px, 0px, 0px, rgba(0, 0, 0, 0));
-        }
-
-        /*
-        a.button:hover, a.selected{
-            text-decoration: none;
-            border-top: 1px solid @linkColorHover;
-        }
-        */
+    }
+    a {
+        display:block;
+        text-align:center;
+        font-size:18px;
+        color: #696B33;
+        .text-shadow(0px, 0px, 0px, rgba(0, 0, 0, 0));
     }
 }
-
 banner {
     position: relative;
     z-index: 1;
@@ -295,56 +285,6 @@ section {
             margin-right: 8px;
         }
     }
-    a.button {
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        background-repeat: no-repeat;
-        background-size: 100%;
-        background-position: 0px 100%;
-    }
-    a.button:hover {
-        width: 24px;
-        margin-bottom: -8px;
-        height: 24px;
-    }
-
-    a.twitter {
-        background-image: url(../img/twitter.png);
-    }
-    a.facebook {
-        background-image: url(../img/facebook.png);
-    }
-    a.linkedin {
-        background-image: url(../img/linkedin.png);
-    }
-    a.feed {
-        background-image: url(../img/feed.png);
-    }
-    a.slideshare {
-        background-image: url(../img/slideshare.png);
-    }
-    a.github {
-        background-image: url(../img/github.png);
-    }
-    a.youtube {
-        background-image: url(../img/youtube.png);
-    }
-    a.delicious {
-        background-image: url(../img/delicious.png);
-    }
-    a.mail {
-        background-image: url(../img/mail.png);
-    }
-    nav {
-        float: right;
-    }
-    .social-buttons {
-        padding:10px 0px 20px;
-        a {
-            background-image: none;
-        }
-    }
     .nav-next-prev {
         padding: 10px 0px;
         .next {
@@ -466,11 +406,49 @@ footer {
     padding: 0px 4px;
     position: relative;
 }
-/* -------------------------------- */
-
-/* Generics                         */
-
-/* -------------------------------- */
+a.socialButton {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: 0px 100%;
+}
+a.socialButton:hover {
+    width: 24px;
+    margin-bottom: -8px;
+    height: 24px;
+}
+a.twitter {
+    background-image: url(../img/twitter.png);
+}
+a.facebook {
+    background-image: url(../img/facebook.png);
+}
+a.linkedin {
+    background-image: url(../img/linkedin.png);
+}
+a.feed {
+    background-image: url(../img/feed.png);
+}
+a.slideshare {
+    background-image: url(../img/slideshare.png);
+}
+a.github {
+    background-image: url(../img/github.png);
+}
+a.youtube {
+    background-image: url(../img/youtube.png);
+}
+a.delicious {
+    background-image: url(../img/delicious.png);
+}
+a.mail {
+    background-image: url(../img/mail.png);
+}
+/* -------------------------------- 
+ Generics                         
+ -------------------------------- */
  html, body {
     margin: 0px;
     padding: 0px;
