Transforma slideshare igual ao youtube

--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -157,6 +157,9 @@ banner {
     .arrow-right {
         background: url(../img/arrow-right.png) no-repeat center;
     }
+    nav {
+        margin-bottom: 12px;
+    }
 }
 section {
     background: url(../img/corner-shadow-top-left.png) no-repeat top left;
@@ -184,7 +187,7 @@ section {
     }
     .widget:hover {
         background-position: 100% 50%;
-         .excerpt {
+        .excerpt {
             display: block
         }
     }
@@ -226,11 +229,9 @@ section {
                 display: none
             }
         }
-        
         .twitter table {
             height: 210px;
         }
-
     }
     /*
     time {
@@ -505,7 +506,7 @@ a {
     .transition;
     /*.text-shadow(0px, 0px, 2px, rgba(255, 200, 0, 0.7));*/
     padding-bottom: 2px;
-    background: url(../img/anchor-bg.png) no-repeat 0px -2px;
+    background: url(../img/anchor-bg.png) no-repeat 0px 110%;
 }
 a:hover, a.selected {
     color:@linkColorHover;
